Fix footer on mobile

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,6 +12,11 @@
 
   .footerContent {
     display: flex;
+    font-size: 14px;
+  }
+
+  .footerContentSmall {
+    font-size: 12px;
   }
 
   a {
